--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "github": "jaeh"
     }
   ],
+  "keywords": ["css-in-js", "css", "magic"],
   "main": "src/index.js",
   "dependencies": {
     "@magic/deep": "0.0.1",
