update deps, add @magic/core as devDep

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "src"
   ],
   "devDependencies": {
-    "@magic/test": "0.0.7"
+    "@magic/test": "0.0.7",
+    "@magic/core": "github:magic/core"
   },
   "scripts": {
     "start": "t -p",
