update magic/test, add gitbadges, add args to npm run scripts, update readme to remove coverage notice

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "clean": "magic clean",
     "serve": "magic serve",
     "dev": "magic dev",
-    "format": "f -w",
-    "test": "t",
+    "format": "f -w --exclude docs",
+    "test": "t --exclude docs docsrc config.js",
     "calls": "calls"
   },
   "keywords": [
@@ -37,8 +37,9 @@
     "src"
   ],
   "devDependencies": {
+    "@magic-modules/gitbadges": "github:magic-modules/gitbadges",
     "@magic-modules/pre": "github:magic-modules/pre",
     "@magic/core": "github:magic/core",
-    "@magic/test": "0.0.7"
+    "@magic/test": "0.0.8"
   }
 }
