--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@magic-themes/docs": "github:magic-themes/docs",
     "@magic/deep": "0.0.1",
     "@magic/types": "0.0.3",
     "autoprefixer": "9.5.1",
