--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "css",
     "magic"
   ],
-  "main": "src/index.js",
+  "main": "src/index.mjs",
   "dependencies": {
     "@magic/deep": "0.0.1",
     "@magic/types": "0.1.1",
