--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
   "name": "@magic/css",
   "version": "0.6.0",
-  "description": "css in js",
   "author": "Wizards & Witches",
+  "description": "css in js",
   "license": "AGPL-3.0",
-  "contributors": [
-    {
-      "name": "jascha ehrenreich",
-      "github": "jaeh"
-    }
-  ],
+  "homepage": "https://magic.github.io/core",
   "scripts": {
     "start": "t -p",
     "build": "NODE_ENV=production magic build",
@@ -21,11 +16,16 @@
     "test": "t --exclude docs example config.js",
     "calls": "calls"
   },
-  "keywords": [
-    "css-in-js",
-    "css",
-    "magic"
+  "files": [
+    "src"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/magic/test.git"
+  },
+  "bugs": {
+    "url": "https://github.com/magic/test/issues"
+  },
   "main": "src/index.mjs",
   "dependencies": {
     "@magic/deep": "0.0.1",
@@ -33,14 +33,22 @@
     "autoprefixer": "9.5.1",
     "postcss": "7.0.16"
   },
-  "files": [
-    "src"
-  ],
   "devDependencies": {
     "@magic-modules/git-badges": "github:magic-modules/git-badges",
     "@magic-modules/pre": "github:magic-modules/pre",
     "@magic-themes/docs": "github:magic-themes/docs",
     "@magic/core": "github:magic/core",
     "@magic/test": "0.1.1"
-  }
+  },
+  "keywords": [
+    "css-in-js",
+    "css",
+    "magic"
+  ],
+  "contributors": [
+    {
+      "name": "jascha ehrenreich",
+      "github": "jaeh"
+    }
+  ]
 }
