--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - "12"
+  - "12.13.0"
 
 cache: npm
 
@@ -18,6 +18,7 @@ matrix:
 
 install:
   - npm install
+  - npm link
 
 script:
   - npm test
