--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "type": "module",
   "dependencies": {
     "@magic/deep": "0.1.0",
+    "@magic/log": "^0.1.1",
     "@magic/types": "0.1.2",
     "autoprefixer": "9.7.2",
     "postcss": "7.0.23"
