--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "type": "module",
   "dependencies": {
     "@magic/deep": "0.1.0",
-    "@magic/log": "^0.1.1",
+    "@magic/log": "0.1.2",
     "@magic/types": "0.1.2",
     "autoprefixer": "9.7.3",
     "postcss": "7.0.23"
