--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "@magic/log": "0.1.2",
     "@magic/types": "0.1.2",
     "autoprefixer": "9.7.3",
-    "postcss": "7.0.23"
+    "postcss": "7.0.24"
   },
   "devDependencies": {
-    "@magic-modules/git-badges": "github:magic-modules/git-badges",
-    "@magic-modules/light-switch": "github:magic-modules/light-switch",
-    "@magic-modules/pre": "github:magic-modules/pre",
-    "@magic-themes/docs": "github:magic-themes/docs",
-    "@magic/core": "github:magic/core",
-    "@magic/test": "0.1.21"
+    "@magic-modules/git-badges": "0.0.3",
+    "@magic-modules/light-switch": "0.0.2",
+    "@magic-modules/pre": "0.0.2",
+    "@magic-themes/docs": "0.0.2",
+    "@magic/core": "0.0.2",
+    "@magic/test": "0.1.23"
   },
   "keywords": [
     "css-in-js",
