--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "test": "t --exclude docs example config.js",
     "calls": "calls"
   },
-  "engine": {
-    "node": ">=12.13.0"
+  "engines": {
+    "node": ">=13.5.0"
   },
+  "engineStrict": true,
   "files": [
     "src"
   ],
@@ -30,8 +31,6 @@
     "url": "https://github.com/magic/css/issues"
   },
   "main": "src/index.mjs",
-  "module": "src/index.mjs",
-  "type": "module",
   "dependencies": {
     "@magic/deep": "0.1.1",
     "@magic/log": "0.1.2",
@@ -44,9 +43,10 @@
     "@magic-modules/git-badges": "0.0.3",
     "@magic-modules/light-switch": "0.0.3",
     "@magic-modules/pre": "0.0.2",
-    "@magic-themes/docs": "0.0.2",
-    "@magic/core": "0.0.14",
-    "@magic/test": "0.1.25"
+    "@magic-themes/docs": "0.0.3",
+    "@magic/core": "0.0.16",
+    "@magic/format": "0.0.1",
+    "@magic/test": "0.1.27"
   },
   "keywords": [
     "css-in-js",
