--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "main": "src/index.mjs",
   "dependencies": {
     "@magic/deep": "0.1.3",
+    "@magic/fs": "0.0.6",
     "@magic/log": "0.1.5",
     "@magic/types": "0.1.12",
     "autoprefixer": "9.7.6",
