--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
   },
   "main": "src/index.mjs",
   "dependencies": {
+    "@magic-modules/no-spy": "0.0.1",
     "@magic/deep": "0.1.3",
     "@magic/fs": "0.0.6",
     "@magic/log": "0.1.5",
     "@magic/types": "0.1.12",
-    "autoprefixer": "9.8.2",
+    "autoprefixer": "9.8.4",
     "postcss": "7.0.32"
   },
   "devDependencies": {
-    "@magic-modules/gdpr": "0.0.16",
     "@magic-modules/git-badges": "0.0.10",
     "@magic-modules/light-switch": "0.0.6",
     "@magic-modules/pre": "0.0.8",
